fix spacing on details page on wider viewports

--- a/src/client/src/containers/PostGenerationModal/styles.module.css
+++ b/src/client/src/containers/PostGenerationModal/styles.module.css
@@ -98,4 +98,5 @@
   color: var(--vscode-textLink-foreground);
   font-weight: var(--vscode-editor-font-weight);
   text-decoration: none;
+  font-size: 14px;
 }
